adding js to randomly generate values

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- local CSS style sheet -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-	<title>Crystal Collectr Game</title>
+	<title>Crystal Collector Game</title>
 
 </head>
 <body>
@@ -41,8 +41,7 @@
 
 		<!-- your score section  -->
 		<div>Your total score is:</div>
-		<div id="yourScore"></div>
-
+		<div id="userNumberScore"></div>
 
 
 	<!-- linking JS -->
