adding js to incease score on click

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf-8">
 
+    <!-- Added link to the jQuery Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!-- bootstrap css link -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<!-- local CSS style sheet -->
@@ -26,22 +28,22 @@
 		</div>
 
 		<!-- target score box -->
-		<div id="targetscore"></div>
+		<div id="targetScore"></div>
 
 		<!-- scoreboard -->
-		<div id="scoreboard"></div>
+		<div id="wins-losses"></div>
 
 		<!-- crystal list -->
 		<container id="crystals">
-			<div id="crystalOne"></div>
-			<div id="crystalTwo"></div>
-			<div id="crystalThree"></div>
-			<div id="crystalFour"></div>
+			<div id="crystalOne">One</div>
+			<div id="crystalTwo">Two</div>
+			<div id="crystalThree">Three</div>
+			<div id="crystalFour">Four</div>
 		</container>
 
 		<!-- your score section  -->
 		<div>Your total score is:</div>
-		<div id="userNumberScore"></div>
+		<div id="userScore"></div>
 
 
 	<!-- linking JS -->
