adding conditional js statements

--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
 		<div id="targetScore"></div>
 
 		<!-- scoreboard -->
-		<div id="wins-losses"></div>
+		<div>
+			<div id="banner"></div>
+			<br>
+			<div id="wins"> Wins: 0</div>
+			<br>
+			<div id="losses">Losses: 0</div>
+			<br>
+		</div>
 
 		<!-- crystal list -->
 		<container id="crystals">
